kustomize/overlays/dev/test-app/service.yaml
---
#--------------------------------------------------------------
# Service
# https://kubernetes.io/ja/docs/concepts/services-networking/service/
#--------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
